--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6240,3 +6240,19 @@
     model: Galaxy Note 8
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: 'Mozilla/5.0 (iPhone; CPU iPhone OS 11_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E216 [FBAN/FBIOS;FBAV/168.0.0.57.90;FBBV/103647182;FBDV/iPhone10,5;FBMD/iPhone;FBSN/iOS;FBSV/11.3;FBSS/3;FBCR/cricket;FBID/phone;FBLC/es_LA;FBOP/5;FBRV/104614423]'
+  os:
+    name: iOS
+    version: "11.3"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 168.0.0.57.90
+  device:
+    type: phablet
+    brand: Apple
+    model: iPhone 8 Plus
+  os_family: iOS
+  browser_family: Unknown
