--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9615,6 +9615,8 @@ LG:
       model: 'G7 Fit'
     - regex: 'LM-Q910'
       model: 'G7 One'
+    - regex: 'LGL23(?:[);/ ]|$)'
+      model: 'G Flex'
     - regex: 'LM-G820(N|QM[0127]|UMB)?'
       model: 'G8'
     - regex: 'LM-G850'
@@ -11563,7 +11565,7 @@ Nomi:
     - regex: 'C101010 Ultra2'
       model: 'Ultra 2'
       device: 'tablet'
-    - regex: '(C0(?:700(?:[02358]|2HD)|7850)|C1010[0-3])(?:[);/ ]|$)'
+    - regex: '(?:Nomi[ _])?(C0(?:700(?:[02358]|2HD)|7850|9600)|C1010[0-3])(?:[);/ ]|$)'
       model: '$1'
       device: 'tablet'
     - regex: 'Nomi[ _-]([^;/]+) Build'
@@ -16478,8 +16480,8 @@ Vestel:
       model: 'Venus 5.5V'
     - regex: 'VSP355S'
       model: 'Venus 5.5X'
-    - regex: 'Venus[ _]V([1-9])'
-      model: 'Venus V$1'
+    - regex: 'Venus[ _]V([1-9])([ _][0-9]{4})?'
+      model: 'Venus V$1$2'
     - regex: 'Venus[ _]Z([1-9]0)'
       model: 'Venus Z$1'
     - regex: 'Venus[ _]GO'
@@ -18208,7 +18210,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A001ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZR01|ZTG01|K8[37]CA)(?:[);/ ]|$)'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A001ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZR01|ZTG01|K8[37]CA|VERGATARIO ?5(?:PLUS)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -18614,6 +18616,10 @@ ZTE:
       model: 'Optus X Vista'
     - regex: 'V769M(?:[);/ ]|$)'
       model: 'Leo Q2'
+    - regex: 'VERGATARIO 5(?:[);/ ]|$)'
+      model: 'Vergatario 5'
+    - regex: 'VERGATARIO5PLUS(?:[);/ ]|$)'
+      model: 'Vergatario 5 Plus'
 
     # explicit tablet models
     - regex: 'K83CA(?:[);/ ]|$)'
@@ -20713,7 +20719,7 @@ Sunstech:
 
 # Hotwav
 Hotwav:
-  regex: '(?:Venus[_ ](?:X1|X1[0245679]|R8 PLUS|R[236-9]|R1[028])|Cosmos[ _](?:V8_lite|V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13])|Hot[_ ]6)(?:[);/ ]|$)'
+  regex: '(?:Venus[_ ](?:X[12]|X1[0245679]|R8 PLUS|R[236-9]|R1[028]|X16-1)|Cosmos[ _](?:V8_lite|V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13])|Hot[_ ]6)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Cosmos[ _]V8_lite(?:[);/ ]|$)'
@@ -20722,7 +20728,9 @@ Hotwav:
       model: 'Hot 6'
     - regex: 'Venus R8 PLUS(?:[);/ ]|$)'
       model: 'Venus R8 Plus'
-    - regex: 'Venus[_ ](X1|X1[0245679]|R[236-9]|R1[028])(?:[);/ ]|$)'
+    - regex: 'Venus[_ ]X16(?:-1)?(?:[);/ ]|$)'
+      model: 'Venus X16'
+    - regex: 'Venus[_ ](X[12]|X1[0245679]|R[236-9]|R1[028])(?:[);/ ]|$)'
       model: 'Venus $1'
     - regex: '(Cosmos[ _](?:V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13]))(?:[);/ ]|$)'
       model: '$1'
@@ -22988,3 +22996,15 @@ Blow:
   regex: 'LaserTAB10(?:[);/ ]|$)'
   device: 'tablet'
   model: 'Laser Tab 10'
+
+# FNF
+FNF:
+  regex: 'ifive(?:_mini_3GS|X2|Mini3|3)(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: 'ifive_mini_3GS'
+      model: 'iFive Mini 3GS'
+    - regex: 'ifive(X2|3)'
+      model: 'iFive $1'
+    - regex: 'ifiveMini3'
+      model: 'iFive Mini 3'
